[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-trading-env"
version = "0.3.2"
license = {file = "LICENSE.txt"}
authors = [
  { name="Navendu Garg", email="navendugarg@gmail.com" },
]
description = "A simple, easy, customizable Open IA Gym environments for trading."
readme = "README.md"
# Updated minimum Python version to align with numpy>=2.0.0 requirement
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    # Removed Python 3.8 classifier
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13", # Add Python 3.13 classifier
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Updated minimum pandas version for Python 3.13 compatibility
    "pandas>=2.2.0",
    # Updated minimum numpy version for Python 3.13 compatibility
    "numpy>=2.0.0",
    # Updated minimum gymnasium version
    "gymnasium>=0.29.1",
    # Updated minimum flask version
    "flask>=3.0.0",
    # Updated minimum plotly version
    "plotly>=5.22.0",
    # Updated minimum ccxt version
    "ccxt>=4.3.0",
    # Updated minimum nest_asyncio version
    "nest_asyncio>=1.6.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]

[project.urls]
"Homepage" = "https://github.com/navendugarg/Gym-Trading-Env"
"Bug Tracker" = "https://github.com/navendugarg/Gym-Trading-Env/issues"
